<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <!--Aquí se agregan las opciones del menú
    para que al dar clic hagan algo
    -->

    <!--Esta es la opción de inicio-->
    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.proyecto_final.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <!--Esta es la opción de registrar-->
    <fragment
        android:id="@+id/nav_registrar"
        android:name="com.example.proyecto_final.ui.registrar.RegistrarFragment"
        android:label="@string/menu_registrar"
        tools:layout="@layout/fragment_registrar" />

    <!--Esta es la opción de coros-->
    <fragment
        android:id="@+id/nav_coros"
        android:name="com.example.proyecto_final.ui.coros.CorosFragment"
        android:label="@string/menu_coros"
        tools:layout="@layout/fragment_coros" />

    <!--Esta es la opción de alabanzas-->
    <fragment
        android:id="@+id/nav_alabanzas"
        android:name="com.example.proyecto_final.ui.alabanzas.AlabanzasFragment"
        android:label="@string/menu_alabanzas"
        tools:layout="@layout/fragment_alabanzas" />

    <!--Esta es la opción de contactanos-->
    <fragment
        android:id="@+id/nav_contactanos"
        android:name="com.example.proyecto_final.ui.contactanos.ContactanosFragment"
        android:label="@string/menu_contactanos"
        tools:layout="@layout/fragment_contactanos" />
</navigation>